<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.14</version>
        <relativePath/>
    </parent>

    <groupId>com.kitehub</groupId>
    <artifactId>kitehub-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>KiteHub Platform</name>
    <description>Multi-tenant SaaS platform for KiteClass instances</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.version>1.18.46</lombok.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <testcontainers.version>1.21.4</testcontainers.version>
        <springdoc.version>2.8.17</springdoc.version>
        <!-- GAP-203: pinned to fix CVEs surfaced via GitHub code-scanning 2026-04-21 -->
        <!-- Spring Boot 3.5.13 ships Tomcat 10.1.53; override resolves CVE-2026-34483/34487/34500 -->
        <tomcat.version>10.1.54</tomcat.version>
        <commons-beanutils.version>1.11.0</commons-beanutils.version>
        <commons-compress.version>1.28.0</commons-compress.version>
        <poi.version>5.5.1</poi.version>
        <!-- GAP-114: structured JSON logging via LogstashEncoder (Spring Boot 3.5.x compatible) -->
        <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
    </properties>

    <modules>
        <module>kitehub-platform</module>
        <module>kitehub-subscription</module>
        <module>kitehub-branding</module>
        <module>kitehub-email</module>
        <module>kitehub-admin</module>
        <module>kitehub-gateway</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.kitehub</groupId>
                <artifactId>kitehub-platform</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SpringDoc OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- GAP-203: CVE overrides for transitive deps -->
            <!-- Tomcat version pinned via <tomcat.version> property (Spring Boot parent respects it) -->
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commons-beanutils.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>

            <!-- GAP-114: structured JSON logging — used by per-service logback-spring.xml -->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--
      GAP-245 Phase 1 — strict-warnings profile.

      Activated in CI (`mvn -P strict-warnings ...`) so compile output surfaces
      deprecation, unchecked, raw-type, cast, and override warnings prominently.

      Phase 1 (this PR): warnings are SHOWN but build still passes (no -Werror).
      Phase 2 (GAP-261-werror-flipday): inventory + triage existing warnings,
      then flip CI profile to add `-Werror` for fail-on-warning behavior.

      Local dev iteration is unaffected — profile is opt-in via `-P` flag only.
    -->
    <profiles>
        <profile>
            <id>strict-warnings</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <showWarnings>true</showWarnings>
                            <showDeprecation>true</showDeprecation>
                            <compilerArgs>
                                <arg>-Xlint:deprecation</arg>
                                <arg>-Xlint:unchecked</arg>
                                <arg>-Xlint:rawtypes</arg>
                                <arg>-Xlint:cast</arg>
                                <arg>-Xlint:overrides</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
